# gitlab-starter

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.geo.yml  pyproject.toml
.github/workflows/: ci.yml
data/: sample_flight.csv
docs/: DESIGN_NOTES.md  SETUP.md
local-gitlab/: docker-compose.yml
scripts/: make_sample_flight.py
src/flightlog/: __init__.py  cli.py  metrics.py  render.py  telemetry.py
src/geo/: Dockerfile  api.py  ingest.py  schema.sql
src/numstats/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_geo.py  test_metrics.py  test_telemetry.py
