[project]
name = "flightlog"
version = "0.1.0"
description = "Validate drone telemetry logs and render a visual flight report -- a self-hosted GitLab CI/CD demo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Istvan" }]
dependencies = []

[project.scripts]
flightlog = "flightlog.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "build>=1.2",
]
viz = [
    "matplotlib>=3.8",
]
geo = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
# matplotlib backend must be selected before importing pyplot, so imports in
# the render module are intentionally not all at the top of the file.
"src/flightlog/render.py" = ["E402"]
